--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,18 +1,16 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "manage.py",
-        "use": "@vercel/python",
-        "config": {
-          "maxLambdaSize": "50mb"
+        {
+            "src": "djangoProject/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
         }
-      }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/manage.py"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "djangoProject/wsgi.py"
+        }
     ]
-  }
+}
