--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-VITE_SERVER_URL = http://127.0.0.1:8000
+VITE_SERVER_URL = https://destiny-future-academy-server-ih233ku8b-zolawt25s-projects.vercel.app
